Fixes for content pages on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -84,7 +84,7 @@ body {
   overflow: hidden; }
 
 p, ul {
-  font-size: 1.6rem;
+  font-size: 1.8rem;
   line-height: 175%;
   margin-bottom: 1.5rem; }
 
@@ -145,7 +145,7 @@ q {
   position: relative;
   display: block;
   font-family: "Zilla Slab", "Adelle", "Georgia", serif;
-  font-size: 3.6rem;
+  font-size: 2.16rem;
   font-weight: bold;
   line-height: 150%;
   text-align: center;
@@ -198,7 +198,10 @@ q {
   .projectWrapper {
     min-height: 100vh; }
     .projectWrapper .browserProject {
-      width: 80%; } }
+      width: 80%; }
+
+  q {
+    font-size: 3.6rem; } }
 .about {
   background-color: #F0F0F0; }
   .about header h1 a {
@@ -213,7 +216,7 @@ q {
     text-transform: uppercase;
     text-align: center;
     color: #14B4B5;
-    margin-bottom: 3.2rem; }
+    margin-bottom: 2.6rem; }
   .about article img {
     display: block;
     border-radius: 5px;
