--- a/css/sass/smallest.scss
+++ b/css/sass/smallest.scss
@@ -8,7 +8,7 @@ $font_smallest_logo: 3rem;
 $font_small_header: 2.8rem;
 $font_smallest_header: 2.5rem;
 $font_smallest_menuSpan: 1.2rem;
-$font_smallest_p: 1.6rem;
+$font_smallest_p: 1.8rem;
 $font_smallest_footNote: 1.2rem;
 $font_smallest_footer: 1.7rem;
 $font_large_standard: 2.4rem;
@@ -127,7 +127,7 @@ q {
     position: relative;
     display: block;
     font-family: $secondary_font;
-    font-size: 3.6rem;
+    font-size: $font_smallest_p*1.2;
     font-weight: bold;
     line-height: 150%;
     text-align: center;
@@ -209,6 +209,10 @@ q {
             width: 80%;
         }
     }
+
+    q {
+        font-size: 3.6rem;
+    }
 }
 
 .about {
@@ -232,7 +236,7 @@ q {
             text-transform: uppercase;
             text-align: center;
             color: $primary_teal;
-            margin-bottom: $margin_standard;
+            margin-bottom: 2.6rem;
         }
 
         
